# algoritms

./: .gitignore
2/: ExprParser.cpp  ExprParser.h  Reader.h  VarMapper.cpp  VarMapper.h
3/: FSNode.cpp  FSNode.h  FileSystem.h  TUI.cpp  main.cpp
lab_1/: .clang-format  Buffer.cpp  Buffer.h  CMakeLists.txt  Queue.cpp  Queue.h  Reader.cpp  Reader.h  main.cpp
lab_2/: CMakeLists.txt  ExprParser.cpp  ExprParser.h  Reader.cpp  Stack.h  main.cpp
lab_3/: .clangd  CMakeLists.txt  FileSystem.cpp  FileSystem.h  TUI.cpp  TUI.h  main.cpp
lab_4/: CMakeLists.txt  MST.cpp  MST.h  Structs.cpp  Structs.h  main.cpp
